native image打包优化